--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"
+    />
     <title>KingDomino</title>
   </head>
   <body>
