--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css"
     />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <title>KingDomino</title>
   </head>
   <body>
