--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <title>KingDomino</title>
   </head>
